# rust-backend

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20251210024804_create_products.sql
src/: cache.rs  lib.rs  main.rs  product.rs  routes.rs
src/application/: product_service.rs
src/domain/: product.rs
src/handlers/: product_handlers.rs
src/repositories/: product_repository.rs
tests/: product_handlers.rs  product_repository.rs
